--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 * linguist-vendored
+*.py linguist-vendored=true
+*.cpp linguist-vendored=true
+*.h linguist-vendored=true
+*.java linguist-vendored=true
